[Update]login/register表示

--- a/docker/docker/php/Dockerfile
+++ b/docker/docker/php/Dockerfile
@@ -5,6 +5,9 @@ RUN apt-get update \
   && apt-get install -y libzip-dev mariadb-client \
   && docker-php-ext-install zip pdo_mysql
 
+RUN curl -SL https://deb.nodesource.com/setup_17.x | bash
+RUN apt-get install -y nodejs
+
 #Composer install
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 
